--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -207,6 +207,10 @@ footer {
   margin-right: 10px;
 }
 
+.contact .row .column-card {
+  font-size: 20px;
+}
+
 }
 
 @media screen and (max-width: 768px) {
